--- a/biolink moj/zeexy/index.html
+++ b/biolink moj/zeexy/index.html
@@ -11,7 +11,7 @@
     <link rel="apple-touch-icon" href="moje profilowe.png">
     <link rel="stylesheet" href="../cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
-      <meta property="og:url" content="http://devilgg.eu/snorlax">
+      <meta property="og:url" content="http://devilgg.eu/zeexy">
       <meta property="og:title" content="@snorlax | devilgg.eu">
       <meta property="og:description" content="My BioLink powered by discord.gg/devilgg">
       <meta property="og:image" content="moje profilowe.png">
